install missing dependencies and fix button bottom margin on mobile view

--- a/source/sass/2-basics/_example-buttons.sass
+++ b/source/sass/2-basics/_example-buttons.sass
@@ -32,6 +32,8 @@ input[type="button"]
     border-color: $complimentary2
     background-color: $complimentary2
     outline: 0
+  @media screen and (max-width: $m-screen)
+    margin-bottom: 15px
 
 .button-primary,
 button,
